# camera_engine_dcaiq

./: CMakeLists.txt
include/: dcaiq_api.h
include/rkaiq/algos/: rk_aiq_algo_des.h
include/rkaiq/algos/a3dlut/: rk_aiq_types_a3dlut_algo.h  rk_aiq_types_a3dlut_hw.h  rk_aiq_uapi_a3dlut_int.h
include/rkaiq/algos/ablc/: rk_aiq_types_ablc_algo.h  rk_aiq_types_ablc_algo_int.h  rk_aiq_types_ablc_hw.h  rk_aiq_uapi_ablc_int.h
include/rkaiq/algos/accm/: rk_aiq_types_accm_algo.h  rk_aiq_types_accm_algo_int.h  rk_aiq_types_accm_hw.h  rk_aiq_uapi_accm_int.h
include/rkaiq/algos/acp/: rk_aiq_uapi_acp_int.h
include/rkaiq/algos/adebayer/: rk_aiq_uapi_adebayer_int.h
include/rkaiq/algos/adegamma/: rk_aiq_types_adegamma_algo_int.h  rk_aiq_uapi_adegamma_int.h
include/rkaiq/algos/ae/: rk_aiq_types_ae_algo.h  (+3 more)
include/rkaiq/common/: rk_aiq.h  rk_aiq_comm.h  rk_aiq_types.h
include/rkaiq/iq_parser/: RkAiqCalibDbTypes.h
include/rkaiq/uAPI/: rk_aiq_user_api_a3dlut.h  rk_aiq_user_api_ablc.h  rk_aiq_user_api_accm.h  rk_aiq_user_api_acp.h  rk_aiq_user_api_adebayer.h  rk_aiq_user_api_adegamma.h  rk_aiq_user_api_adehaze.h  rk_aiq_user_api_adpcc.h  rk_aiq_user_api_ae.h  rk_aiq_user_api_af.h  rk_aiq_user_api_afec.h  rk_aiq_user_api_agamma.h  rk_aiq_user_api_agic.h  rk_aiq_user_api_ahdr.h  rk_aiq_user_api_aldch.h  rk_aiq_user_api_alsc.h  rk_aiq_user_api_anr.h  rk_aiq_user_api_asd.h  rk_aiq_user_api_asharp.h  rk_aiq_user_api_awb.h  rk_aiq_user_api_awdr.h  rk_aiq_user_api_custom_ae.h  rk_aiq_user_api_debug.h  rk_aiq_user_api_imgproc.h  rk_aiq_user_api_sysctl.h
lib/: librockchip_mpp.so.1
(+38 files in other folders)
